// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`parameter prompt config for when invalid input > args 1`] = `
{
  "a": "foo",
  "help": false,
}
`;

exports[`parameter prompt config for when invalid input > tty 1`] = `
[
  "[2m[90m1/1[39m[22m  [32ma[39m",
  "foo",
  "
",
]
`;

exports[`parameter prompt config for when invalid input > tty strip ansi 1`] = `
[
  "1/1  a",
  "foo",
  "
",
]
`;
